--- a/src/components/app/app-entry.html
+++ b/src/components/app/app-entry.html
@@ -1,11 +1,7 @@
 <router-outlet route="/">
-  <!-- <p class="text-block">
-    Hello
-    <a href="/#/editor">Use the editor</a>
-  </p> -->
-  <map-viewer></map-viewer>
+  <activity-editor></activity-editor>
 </router-outlet>
 
-<!-- <router-outlet route="/editor">
-  <editor-root></editor-root>
+<!-- <router-outlet route="/renderer">
+  <activity-renderer><activity-renderer>
 </router-outlet> -->
