--- a/src/components/activity-renderer/activity-renderer.css
+++ b/src/components/activity-renderer/activity-renderer.css
@@ -3,11 +3,12 @@
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: auto;
 }
 
-.profile-viewer {
+.activity-viewer {
   background-color: #CCCCCC88;
-  position: absolute;
+  position: fixed;
   border-left: 1px solid var(--color-grey-dark);
   border-bottom: 1px solid var(--color-grey-dark);
   border-radius: 0 0 0 4px;
@@ -23,7 +24,7 @@
   font-size: 16px;
 }
 
-.profile-button {
+.activity-button {
   background: unset;
   background-color: var(--color-grey-light);
   border: 1px solid black;
