use selected bounds aspect ratio, add zoom level

--- a/src/components/activity-renderer/activity-renderer.html
+++ b/src/components/activity-renderer/activity-renderer.html
@@ -1,7 +1,15 @@
 
-<canvas id="canvas"></canvas>
+<div class="container">
+  <canvas id="canvas" class="canvas checker-background"></canvas>
+</div>
+
 
 <div class="activity-viewer">
   <p class="title">Activities</p>
   <div id="activities"></div>
+</div>
+
+<div class="control-buttons">
+  <button id="zoomout" class="control-button">-</button>
+  <button id="zoomin" class="control-button">+</button>
 </div>
