--- a/src/components/activity-renderer/activity-renderer.css
+++ b/src/components/activity-renderer/activity-renderer.css
@@ -6,6 +6,31 @@
   overflow: auto;
 }
 
+.container {
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-grey);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.canvas {
+  border: 1px solid black;
+  width: 50%;
+  height: 50%;
+}
+
+.checker-background {
+  --box-size: 8px;
+  --box-size-2x: 16px;
+  background-color: var(--color-grey-light);
+  background-size: var(--box-size-2x) var(--box-size-2x);
+  background-position: 0 0, var(--box-size) var(--box-size);
+  background-image: linear-gradient(45deg, var(--color-grey) 25%, transparent 25%, transparent 75%, var(--color-grey) 75%, var(--color-grey)),
+                    linear-gradient(45deg, var(--color-grey) 25%, transparent 25%, transparent 75%, var(--color-grey) 75%, var(--color-grey));
+}
+
 .activity-viewer {
   background-color: #CCCCCC88;
   position: fixed;
@@ -16,7 +41,6 @@
   right: 0;
   padding: 12px;
   color: var(--color-black);
-  z-index: 500; /* leaflet is set to z-index 400 */
 }
 
 .title {
@@ -24,7 +48,7 @@
   font-size: 16px;
 }
 
-.activity-button {
+.profile-button {
   background: unset;
   background-color: var(--color-grey-light);
   border: 1px solid black;
@@ -34,4 +58,27 @@
   padding: 4px;
   cursor: pointer;
   display: block;
+}
+
+.control-buttons {
+  background-color: #CCCCCC88;
+  position: fixed;
+  border-left: 1px solid var(--color-grey-dark);
+  border-top: 1px solid var(--color-grey-dark);
+  border-radius: 4px 0 0 0;
+  bottom: 0;
+  right: 0;
+  padding: 12px;
+  color: var(--color-black);
+}
+
+.control-button {
+  background-color: var(--color-grey-light);
+  border: 1px solid var(--color-grey-dark);
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  margin: 0 4px;
+  font-size: 24px;
+  cursor: pointer;
 }
