--- a/src/components/activity-renderer/activity-renderer.html
+++ b/src/components/activity-renderer/activity-renderer.html
@@ -3,13 +3,17 @@
   <canvas id="canvas" class="canvas checker-background"></canvas>
 </div>
 
-
-<div class="activity-viewer">
-  <p class="title">Activities</p>
-  <div id="activities"></div>
+<div class="upper-left-controls">
+  <div class="activity-viewer">
+    <p class="title">Activities</p>
+    <div id="activities"></div>
+  </div>
+  <render-controls-2d></render-controls-2d>
 </div>
 
-<div class="control-buttons">
-  <button id="zoomout" class="control-button">-</button>
-  <button id="zoomin" class="control-button">+</button>
+
+<div class="zoom-buttons">
+  <p id="zoomdisplay" class="zoom-display"></p>
+  <button id="zoomout" class="zoom-button">-</button>
+  <button id="zoomin" class="zoom-button">+</button>
 </div>
