render options object

--- a/src/components/activity-renderer/activity-renderer.html
+++ b/src/components/activity-renderer/activity-renderer.html
@@ -8,7 +8,12 @@
     <p class="title">Activities</p>
     <div id="activities"></div>
   </div>
-  <render-controls-2d></render-controls-2d>
+  <render-controls-2d id="rendercontrols"></render-controls-2d>
+  <text-button
+    click="handleRenderButtonClick"
+    label="Render"
+  >
+  </text-button>
 </div>
 
 
