use render options

--- a/src/components/render-controls-2d/render-controls-2d.html
+++ b/src/components/render-controls-2d/render-controls-2d.html
@@ -20,6 +20,15 @@
 >
 </text-input>
 
+<label class="setting-label" for="canvasColor">Canvas Color</label>
+<color-input
+  id="canvasColor"
+  name="fill"
+  value="#FFFFFF"
+  change="handleCanvasColorChange"
+>
+</color-input>
+
 <label class="setting-label" for="fillColor">Fill Color</label>
 <color-input
   id="fillColor"
