persist activity profile

--- a/src/components/activity-renderer/activity-renderer.html
+++ b/src/components/activity-renderer/activity-renderer.html
@@ -4,10 +4,7 @@
 </div>
 
 <div class="upper-left-controls">
-  <div class="activity-viewer">
-    <p class="title">Activities</p>
-    <div id="activities"></div>
-  </div>
+  <profile-selector id="profileselector"></profile-selector>
   <render-controls-2d id="rendercontrols"></render-controls-2d>
   <text-button
     click="handleRenderButtonClick"
