--- a/src/components/activity-renderer-2d/activity-renderer-2d.html
+++ b/src/components/activity-renderer-2d/activity-renderer-2d.html
@@ -3,7 +3,7 @@
   <canvas id="canvas" class="canvas checker-background"></canvas>
 </div>
 
-<div class="upper-left-controls">
+<div class="upper-right-controls">
   <profile-selector id="profileselector"></profile-selector>
   <render-controls-2d id="rendercontrols"></render-controls-2d>
   <text-button
