name selected files, fix aspect ratio

--- a/src/components/render-controls-2d/render-controls-2d.html
+++ b/src/components/render-controls-2d/render-controls-2d.html
@@ -1,4 +1,4 @@
-<label class="setting-label" for="canvasSize">Canvas Size (sq)</label>
+<label class="setting-label" for="canvasSize">Canvas Width (px)</label>
 <text-input
   id="canvasSize"
   type="number"
