--- a/src/components/profile-selector/profile-selector.html
+++ b/src/components/profile-selector/profile-selector.html
@@ -1,4 +1,5 @@
-  <div class="profile-viewer">
-    <p class="title">Profiles</p>
-    <div id="profiles"></div>
-  </div>
+<p class="title">Profiles</p>
+<select id="selector" class="selector">
+  <option value="foo">foo</option>
+  <option value="bar">bar</option>
+</select>
