--- a/src/components/activity-renderer-2d/activity-renderer-2d.css
+++ b/src/components/activity-renderer-2d/activity-renderer-2d.css
@@ -1,50 +1,65 @@
 :host {
-  display: block;
   position: relative;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
-.container {
+.canvas-container {
   width: 100%;
   height: 100%;
   background-color: var(--color-grey);
+  overflow: auto;
 }
 
 .canvas {
-  border: 1px solid black;
-  width: 50%;
-  height: 50%;
+  width: 0;
+  height: 0;
 }
 
-.checker-background {
-  --box-size: 8px;
-  --box-size-2x: 16px;
-  background-color: var(--color-grey-light);
-  background-size: var(--box-size-2x) var(--box-size-2x);
-  background-position: 0 0, var(--box-size) var(--box-size);
-  background-image: linear-gradient(45deg, var(--color-grey) 25%, transparent 25%, transparent 75%, var(--color-grey) 75%, var(--color-grey)),
-                    linear-gradient(45deg, var(--color-grey) 25%, transparent 25%, transparent 75%, var(--color-grey) 75%, var(--color-grey));
+.controls-container {
+  background-color: var(--color-grey-darker);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-y: auto;
+  flex-shrink: 0;
 }
 
-.upper-right-controls {
-  position: fixed;
-  top: 0;
-  right: 0;
-  color: var(--color-black);
+.controls-top {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.controls-bottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  flex: 1;
+}
+
+.render-button {
+  background-color: var(--color-grey-darker);
+  margin-top: 8px;
 }
 
 .zoom-buttons {
-  background-color: #CCCCCC88;
-  position: fixed;
+  background-color: var(--color-grey-light);
   border-left: 1px solid var(--color-grey-dark);
   border-top: 1px solid var(--color-grey-dark);
   border-radius: 4px 0 0 0;
-  bottom: 0;
-  right: 0;
   padding: 12px;
   color: var(--color-black);
+}
+
+.button-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .zoom-button {
@@ -53,16 +68,12 @@
   border-radius: 50%;
   width: 36px;
   height: 36px;
-  margin: 0 4px;
+  margin: 0 12px;
   font-size: 24px;
   cursor: pointer;
 }
 
 .zoom-display {
-  margin-bottom: 4px;
+  margin-bottom: 8px;
   text-align: center;
-}
-
-.render-button {
-  background-color: var(--color-grey-darker);
 }
