move 2d rendering to util file

--- a/src/components/activity-editor/activity-editor.html
+++ b/src/components/activity-editor/activity-editor.html
@@ -1,6 +1,13 @@
 <map-viewer id="map"></map-viewer>
 
+<!-- TODO: change to dropdown -->
 <div class="profile-viewer">
   <p class="title">Profiles</p>
   <div id="profiles"></div>
+
+  <div id="years">
+    <p>TODO: year 1</p>
+    <p>TODO: year 2</p>
+    <p>TODO: year 3</p>
+  </div>
 </div>
