add filter by year

--- a/src/components/profile-selector/profile-selector.html
+++ b/src/components/profile-selector/profile-selector.html
@@ -1,5 +1,2 @@
 <p class="title">Profiles</p>
-<select id="selector" class="selector">
-  <option value="foo">foo</option>
-  <option value="bar">bar</option>
-</select>
+<select id="selector" class="selector"></select>
