--- a/src/components/activity-editor/activity-editor.css
+++ b/src/components/activity-editor/activity-editor.css
@@ -23,14 +23,46 @@
   font-size: 16px;
 }
 
-.profile-button {
-  background: unset;
-  background-color: var(--color-grey-light);
-  border: 1px solid black;
-  border-radius: 4px;
+.selector {
+  width: 100%;
+  padding: 8px;
+  margin: 8px 0;
   outline: unset;
-  margin: 8px;
-  padding: 4px;
-  cursor: pointer;
+  border: 1px solid var(--color-grey-light);
+  border-radius: 4px;
+  background-color: var(--color-grey-darker);
+  color: var(--color-grey-light);
+  font-weight: bold;
+  display: none;
+}
+.selector-visible {
   display: block;
+}
+
+.error-message {
+  display: none;
+  font-size: 16px;
+  margin-top: 8px;
+}
+.error-message-visible {
+  display: block;
+}
+
+.checkbox {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  cursor: pointer;
+  margin: 8px 0;
+}
+
+.year-checkbox {
+  cursor: pointer;
+}
+
+.year-label {
+  font-size: 18px;
+  margin-left: 4px;
+  cursor: pointer;
 }
