--- a/src/components/activity-editor/activity-editor.html
+++ b/src/components/activity-editor/activity-editor.html
@@ -1,13 +1,14 @@
 <map-viewer id="map"></map-viewer>
 
-<!-- TODO: change to dropdown -->
 <div class="profile-viewer">
   <p class="title">Profiles</p>
-  <div id="profiles"></div>
-
-  <div id="years">
-    <p>TODO: year 1</p>
-    <p>TODO: year 2</p>
-    <p>TODO: year 3</p>
-  </div>
+  <select id="selector" class="selector"></select>
+  <p id="error" class="error-message">
+    No activity profiles availble.
+    <br />
+    Follow instructions in the readme file.
+    <br />
+    (npm run processData)
+  </p>
+  <div id="years"></div>
 </div>
