--- a/src/components/activity-renderer-3d/activity-renderer-3d.html
+++ b/src/components/activity-renderer-3d/activity-renderer-3d.html
@@ -5,9 +5,9 @@
 <div class="upper-right-controls">
   <profile-selector id="profileselector"></profile-selector>
   <text-button
-    click="handleRenderButtonClick"
-    label="Render"
-    class="render-button"
+    click="handleAnimateButtonClick"
+    label="Start"
+    id="animatebutton"
   >
   </text-button>
 </div>
