starting 3D control UI

--- a/src/components/activity-renderer-3d/activity-renderer-3d.html
+++ b/src/components/activity-renderer-3d/activity-renderer-3d.html
@@ -4,6 +4,7 @@
 
 <div class="upper-right-controls">
   <profile-selector id="profileselector"></profile-selector>
+  <render-controls-3d id="rendercontrols"></render-controls-3d>
   <text-button
     click="handleAnimateButtonClick"
     label="Start"
