allow transparent background

--- a/src/components/activity-renderer-2d/activity-renderer-2d.html
+++ b/src/components/activity-renderer-2d/activity-renderer-2d.html
@@ -1,6 +1,6 @@
 
 <div class="canvas-container">
-  <canvas id="canvas" class="canvas"></canvas>
+  <canvas id="canvas" class="canvas checker-background"></canvas>
 </div>
 
 <div class="controls-container">
