--- a/src/components/primitives/color-input/color-input.css
+++ b/src/components/primitives/color-input/color-input.css
@@ -14,3 +14,35 @@
   height: 20px;
   cursor: pointer;
 }
+
+.deselect-button {
+  width: 20px;
+  height: 20px;
+  margin-right: 12px;
+  cursor: pointer;
+  background-color: var(--color-grey);
+  border: unset;
+  outline: unset;
+  position: relative;
+  border-radius: 4px;
+  display: block;
+}
+.deselect-active {
+  background-color: var(--color-white);
+}
+
+.deselect-dash {
+  position: absolute;
+  width: 26px;
+  height: 2px;
+  background-color: var(--color-error);
+  border-radius: 4px;
+  top: 50%;
+  left: 50%;
+  transform-origin: center;
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.deselect-suppressed {
+  display: none;
+}
