--- a/src/components/primitives/color-input/color-input.html
+++ b/src/components/primitives/color-input/color-input.html
@@ -1,3 +1,9 @@
+<button
+  id="deselect"
+  class="deselect-button"
+>
+  <span class="deselect-dash"></span>
+</button>
 <input
   type="color"
   id="colorinput"
