--- a/src/components/activity-renderer-2d/activity-renderer-2d.css
+++ b/src/components/activity-renderer-2d/activity-renderer-2d.css
@@ -19,6 +19,16 @@
   height: 0;
 }
 
+.checker-background {
+  --box-size: 8px;
+  --box-size-2x: 16px;
+  background-color: var(--color-grey-light);
+  background-size: var(--box-size-2x) var(--box-size-2x);
+  background-position: 0 0, var(--box-size) var(--box-size);
+  background-image: linear-gradient(45deg, var(--color-grey) 25%, transparent 25%, transparent 75%, var(--color-grey) 75%, var(--color-grey)),
+                    linear-gradient(45deg, var(--color-grey) 25%, transparent 25%, transparent 75%, var(--color-grey) 75%, var(--color-grey));
+}
+
 .controls-container {
   background-color: var(--color-grey-darker);
   display: flex;
