implement year filter when saving profile

--- a/src/components/render-controls-3d/render-controls-3d.html
+++ b/src/components/render-controls-3d/render-controls-3d.html
@@ -49,8 +49,8 @@
 <label class="setting-label" for="toggleElevation">Elevation Displacement</label>
 <toggle-button
   id="toggleElevation"
-  onLabel="Elevation"
-  offLabel="Elevation"
+  onLabel="On"
+  offLabel="Off"
   click="setModelProperty"
 >
 </toggle-button>
@@ -78,8 +78,8 @@
 <label class="setting-label" for="elevationColorToggle">Elevation Color</label>
 <toggle-button
   id="elevationColorToggle"
-  onLabel="Elevation"
-  offLabel="Elevation"
+  onLabel="On"
+  offLabel="Off"
   click="setModelProperty"
 >
 </toggle-button>
