--- a/src/components/app/app-entry.css
+++ b/src/components/app/app-entry.css
@@ -12,6 +12,7 @@
   --color-error: #EE224499;
   --border-default: 1px solid var(--color-grey);
   --border-radius: 4px;
+  background-color: var(--color-grey-light);
 }
 
 a {
